# recycle-moi

./: .gitignore  LICENSE  README.md  render.yaml  render.yml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  docker-build.yml
backend-api/: .dockerignore  DOCKER.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements-docker.txt  setup.py  test_api_docker.py
backend-api/api/: main.py
backend-api/api/routes/: health.py  model.py  predict.py
backend-api/api/schemas/: prediction.py
backend-api/api/utils/: model_loader.py
backend-api/checkpoints/v1.0/: README.md  classification_report.txt  config.yaml  metadata.json  per_class_metrics.json
backend-api/scripts/: create_version.py  evaluate.py  train.py
backend-api/src/config/: __init__.py  config.yaml
backend-api/src/data/: dataset.py  transforms.py
backend-api/src/models/: resnet.py
backend-api/src/training/: evaluator.py  trainer.py
backend-api/src/utils/: helpers.py  logger.py
backend-api/tests/: test_api.py
notebooks/: 01_data_exploration.ipynb  02_baseline_model.ipynb
